k8s/dtp-pacman-argo/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dtp-pacman-argo
  namespace: dtp-pacman-argo-dev
spec:
  ports:
    - name: grpc #Very Important for use GRPC!!!! 
      port: 50051
      protocol: TCP
      targetPort: 50051
  selector:
    app: dtp-pacman-argo
  type: ClusterIP
