k8s/dtp-pacman-argo/istio.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: dtp-pacman-argo
  name: dtp-pacman-argo-grpc
  namespace: dtp-pacman-argo-dev
spec:
  selector:
    app: istio-ingressgateway-internal
  servers:
    - hosts:
        - dtp-pacman-argo-istio-grpc.foo.com
      port:
        name: dtp-pacman-argo-istio-grpc
        number: 31400 # Very important
        protocol: grpc # Very important
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dtp-pacman-argo-virtual-service
  namespace: dtp-pacman-argo-dev
spec:
  gateways:
    - dtp-pacman-argo-grpc
  hosts:
    - dtp-pacman-argo-istio-grpc.foo.com
  http:
    - fault:
        delay:
          fixedDelay: 7s
          percent: 100
      match:
        - port: 31400 # Very important
        - uri:
            prefix: /
      route:
        - destination:
            host: dtp-pacman-argo
            port:
              number: 50051
      timeout: 60s
